chore: ci: pages

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -15,7 +15,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  BASE_PATH: universe-site-web
+  BASE_PATH: /universe-site-web
 
 jobs:
   build:
